sync and update(long)
From 2025-11-15-1 on,maybe https://cnblogs.com/TH911 will has a more comfortable sense.

--- a/_posts/2024-11-18-2.md
+++ b/_posts/2024-11-18-2.md
@@ -18,7 +18,150 @@ words:
 ---
 
 > [例题链接](https://www.luogu.com.cn/problem/P3375)
+>
+> $\text{Upd on 2025/11/25}$：**全文重写**。~~以前写的什么鬼东西~~。
 
+本文中，字符串下标统一**从 $1$ 开始**。
+
+设字符串 $s$，$s[i]$ 表示 $s$ 的第 $i$ 个字符，以 $s[l,r]$ 表示 $s[l]s[l+1]\cdots s[r]$ 构成的子串。
+
+# 前缀函数
+
+设长度为 $n$ 的字符串 $s$，设其前缀函数 $\pi(i)$，满足 $\pi(i)$ 为 $s$ 的前缀 $s[1,i]$ 的最长 border 的长度。
+
+定义字符串 $s$ 的 border 定义为一个不等于 $s$ 的字符串 $t$，满足 $t$ 同时是 $s$ 的前缀和后缀。
+
+例如对于字符串 $\texttt{ABABA}$，有 $\pi(1)=\pi(2)=0,\pi(3)=1,\pi(4)=2,\pi(5)=3$。
+
+显然 $\pi(1)=0$。
+
+## 前缀函数的计算
+
+考虑 $\pi(i)$ 满足什么条件。
+
+维护指针 $j$，表示成功匹配到了 $s[1,j]=s[i-j,i-1]$，且 $j$ 最大。
+
+* 若 $s[i]=s[j+1]$，那么有 $\pi(i)=j+1$，令 $i\leftarrow i+1,j\leftarrow j+1$。
+
+* 否则当 $s[i]\neq s[j+1]$ 时，令 $j\leftarrow\pi(j)$，这样可以保留一个最长的 border。
+
+  如果一直找不到 $s[i]=s[j+1]$ 直到 $j=0$，则说明无法匹配，令 $i\leftarrow i+1$，跳过这一位。
+
+## 前缀函数计算的时间复杂度
+
+考虑 $i$ 单调不降，$j$ 增加的上界同 $i$，均为 $\mathcal O(n)$。故总时间复杂度 $\mathcal O(n)$。
+
+# KMP 算法
+
+设模式串 $s$，文本串 $t$，在 $t$ 中匹配 $s$。
+
+KMP 算法引入了一个概念——fail 指针（失配指针）。
+
+如图所示：
+
+![](/img/2024/11/008.webp)
+
+设指针 $i,j$，表示匹配到了 $t[i]$，**已经**成功找到了 $t[i-j+1,i]=s[1,j]$。
+
+设已经找到了 $t[i-j,i-1]=s[1,j]$：
+
+* 若 $t[i]=s[j+1]$，则代表**这一位匹配成功**，可以继续匹配，令 $i\leftarrow i+1,j\leftarrow j+1$。
+
+* 否则当 $t[i]\neq s[j+1]$ 时，说明**匹配失败**。
+
+  那么我们需要**充分利用已经匹配过的信息**，从而避免无用计算，提升算法效率。
+
+  KMP 算法设计 fail 指针 $\operatorname{fail}(j)$ 表示 $j+1$ 失配（成功匹配到 $j$）时，$j$ 应当跳到哪里。
+
+  当 $t[i]\neq s[j+1]$ 时，令 $j\leftarrow\mathrm{fail}(j)$。
+
+$\operatorname{fail}(j)$ 满足 $s[1,j-1]$ 的 border 最长。
+
+那么在 KMP 中，取 $\operatorname{fail}(j)=\pi(j)$，这可以保证匹配无误，保留一个最长的 border。
+
+***
+
+其实从这里也可以看出来，求前缀函数 $\pi(i)$ 的过程本质上也可以看作让 $s$ 自己匹配自己。
+
+时间复杂度同前缀函数分析，$\mathcal O(n+m)$，$n,m$ 为字符串长度。
+
+## 例题 AC 代码
+
+> [luogu P3375【模板】KMP](https://www.luogu.com.cn/problem/P3375)
+>
+> 给定字符串 $s_1,s_2$，求 $s_2$ 在 $s_1$ 中所有出现位置和 $s_2$ 的前缀函数。
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+constexpr const int N=1e6;
+int n,m,fail[N+1+1];
+char s1[N+1],s2[N+1];
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	cin>>(s1+1)>>(s2+1);
+	n=strlen(s1+1);m=strlen(s2+1);
+	for(int i=2,j=0;i<=m;){
+		if(s2[i]==s2[j+1]){
+			fail[i++]=++j;
+		}else if(j==0){
+			fail[i++]=0;
+		}else{
+			j=fail[j];
+		}
+	}
+	for(int i=1,j=0;i<=n;){
+		if(s1[i]==s2[j+1]){
+			i++,j++;
+			if(j==m){
+				cout<<i-m<<'\n';
+				j=fail[j];
+			}
+		}else if(j==0){
+			i++;
+		}else{
+			j=fail[j];
+		}
+	}
+	for(int i=1;i<=m;i++){
+		cout<<fail[i]<<' ';
+	}
+	
+	cout.flush();
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+
+***
+
+<details class="info">
+    <summary>存档</summary>
+    <p>
+        放一段以前的 Markdown 源码，想看的自己看看好了：
+    </p>
+
+```markdown
 ## 什么是 KMP 算法
 
 ### 命名
@@ -45,7 +188,7 @@ words:
 
 朴素代码代码如下：
 
-```cpp
+​```cpp
 //#include<bits/stdc++.h>
 #include<algorithm>
 #include<iostream>
@@ -84,7 +227,7 @@ int main(){
 	fclose(stdout);*/
 	return 0;
 }
-```
+​```
 
 ## KMP 算法
 
@@ -92,15 +235,15 @@ int main(){
 
 先看看朴素算法的匹配策略：
 
-![](/img/2024/11/007.webp)
+![007](https://img2024.cnblogs.com/blog/3541769/202507/3541769-20250720134015891-75142289.webp)
 
 再看看 KMP 算法的匹配策略：
 
-![](/img/2024/11/008.webp)
+![008](https://img2024.cnblogs.com/blog/3541769/202507/3541769-20250720134023529-932666720.webp)
 
 <p style="color: grey;text-align: center;font-size: 15px;">图片来源：见参考链接</p>
 
-可以发现，KMP 算法在失配时“将模式串移到了适配位置的后方”。
+可以发现，KMP 算法在失配时”将模式串移到了适配位置的后方“。
 
 显然，我们不可能真的去这么做，因为太费时了。
 
@@ -114,7 +257,7 @@ int main(){
 
 先上代码：
 
-```cpp
+​```cpp
 pre[0]=-1;
 for(int i=0,j=0;i<n;){
     if(j==-1||s1[i]==s2[j])i++,j++;
@@ -123,7 +266,7 @@ for(int i=0,j=0;i<n;){
         //匹配到了
     }
 }
-```
+​```
 
 其中，$pre_0=-1$ 仅仅是一个特殊值（详见下文）。
 
@@ -143,15 +286,9 @@ for(int i=0,j=0;i<n;){
 
 <!-- 不要修改此处的样式，这是为了适配 krmarkdown 特意制作的。Don't modify the style of this,it's working fine with krmarkdown,may not be fine when it works on other markdown-->
 
-最开始长这样：
-$$
-\begin{aligned}&\texttt{CDA}\color{red}\texttt{CD}\color{black}\texttt{BCD}\\ &\texttt{CDB}\color{red}\texttt{CD}\end{aligned}
-$$。
+最开始长这样：$\begin{aligned}&\texttt{CDA}\color{red}\texttt{CD}\color{black}\texttt{BCD}\\ &\texttt{CDB}\color{red}\texttt{CD}\end{aligned}$。
 
-就会把模式串位移成：
-$$
-\begin{aligned}\texttt{CDA}&\color{red}\texttt{CD}\color{black}\texttt{BCD}\\ &\color{red}\texttt{CD}\color{black}\texttt{BCD}\end{aligned}
-$$。
+就会把模式串位移成：$\begin{aligned}\texttt{CDA}&\color{red}\texttt{CD}\color{black}\texttt{BCD}\\ &\color{red}\texttt{CD}\color{black}\texttt{BCD}\end{aligned}$。
 
 可以发现：此时会存在**公共部分**（$\color{red}\texttt{CD}$）。
 
@@ -169,12 +306,12 @@ $$。
 
 先放代码：
 
-```cpp
+​```cpp
 for(int i=0,j=-1;i<m;){
     if(j==-1||s2[i]==s2[j])pre[++i]=++j;
     else j=pre[j];
 }
-```
+​```
 
 一个明显的事实：$i\geq j$ 恒成立。
 
@@ -201,7 +338,7 @@ for(int i=0,j=-1;i<m;){
 
 ## 例题 AC 代码
 
-```cpp
+​```cpp
 //#include<bits/stdc++.h>
 #include<algorithm>
 #include<iostream>
@@ -242,7 +379,7 @@ int main(){
 	fclose(stdout);*/
 	return 0;
 }
-```
+​```
 
 ## 参考链接
 
@@ -251,3 +388,10 @@ int main(){
 <https://www.cnblogs.com/fswly/p/17959786>
 
 <https://www.cnblogs.com/zzuuoo666/p/9028287.html>
+```
+</details>
+
+
+
+
+
