--- a/_posts/2025-01-23-5.md
+++ b/_posts/2025-01-23-5.md
@@ -18,6 +18,7 @@ words:
   - Tarjan割点（割顶）
   - Tarjan求割点（割顶）
   - Tarjan 求割点（割顶）
+
 ---
 
 > [例题链接](https://www.luogu.com.cn/problem/P3388)
@@ -51,12 +52,11 @@ words:
         比如说第三张图中只有两个节点，有人认为这两个都是割点，即剩下的那个节点不连通。
     </p>
 </details>
-
 # 无向图 Tarjan 求割点
 
-## 前置知识：Tarjan 求强连通分量
+## 前置知识
 
-[如果你不会，你可以看看](/2025/01/23/1/)。
+[Tarjan 求强连通分量](/2025/01/23/1/)。
 
 ## 无向图 Tarjan 求割点
 
@@ -91,27 +91,28 @@ words:
 
 ### 割点的判定
 
+以下讨论均在 DFS 生成树上。
+
 令节点 $x$ 的子节点为节点 $y_1,y_2,y_3,\cdots,y_k$，则删除节点 $x$ 后其所在连通块会分裂为 $k+1$ 个部分：$y_1,y_2,y_3,\cdots,y_k$ 和父节点及其子树。
 
 那么我们需要判断的就是能否使其分裂为至少 $2$ 个部分。
 
 ***
 
-当节点 $x$ 为根节点时，需要分裂出至少两个符合以下规定的部分。
+* 当节点 $x$ 为根节点时，需要分裂出**至少两个**符合以下规定的部分。
+* 因为父节点的部分肯定是能够分裂出来的，因此当 $x$ 不为根节点时，需要分裂出**至少一个**符合以下规定的部分。
 
-因为父节点的部分肯定是能够分裂出来的，因此当 $x$ 不为根节点时，需要分裂出至少一个符合以下规定的部分。
+由于 DFS 生成树的性质，$\textit{dfn}_{y_i}$ 肯定是大于 $\textit{dfn}_x$ 的。
 
-由于 DFS 生成树的性质，$dfn_{y_i}$ 肯定是大于 $dfn_x$ 的。
+那么 $\textit{low}_{y_i}$ 初始时为 $\textit{dfn}_{y_i}$ 也大于 $\textit{dfn}_x$。
 
-那么 $low_{y_i}$ 初始时为 $dfn_{y_i}$ 也大于 $dfn_x$。
-
-因此若求出来的 $low_{y_i}\geq dfn_x$，则代表其是节点 $x$ 的子节点部分。
+因此若求出来的 $\textit{low}_{y_i}\geq\textit{dfn}_x$，则代表其是节点 $x$ 的子节点部分，即不能回退到更高的地方。
 
 ***
 
 但是存在一个问题：如果只需要分裂出一个很好判断，然而当 $x$ 为根节点时需要判断两个，如何判断 $y_i$ 之间有没有连接呢？
 
-不需要判断，$y_i$ 之间绝对没有连接。
+不需要判断，$y_i$ 之间**绝对**没有连接。
 
 由无向图，不存在横边，因此 $y_i$ 之间想要连接只能够通过公共祖先，然而 $x$ 为根节点是其子节点的唯一公共祖先。
 
@@ -120,15 +121,26 @@ words:
 子节点数 `son` 计算代码：
 
 ```cpp
-if(low[v]>=dfn[x])son++;
+if(!dfn[i]){
+    Tarjan(i,root);
+    low[x]=min(low[x],low[i]);
+    if(low[i]>=dfn[x]){
+        son++;
+    }
+}
 ```
+
 答案记录：
 
 ```cpp
 if(x==root){
-    if(son>1)ans.push_back(x);
+    if(son>=2){
+        ans.push_back(x);
+    }
 }else{
-    if(son>0)ans.push_back(x);
+    if(son>=1){
+        ans.push_back(x);
+    }
 }
 ```
 
@@ -150,57 +162,63 @@ if(x==root){
 #include<stack>
 #include<list>
 using namespace std;
-constexpr const int N=5e5,M=2e6;
-struct graph{
-	struct edge{
-		int v,r;
-	}a[2*M+1];
-	int h[N+1];
-	void create(int u,int v){
-		static int top=1;
-		a[++top]={v,h[u]};
-		h[u]=top;
-	}
-}g;
+constexpr const int N=2e4;
+int n;
+vector<int>g[N+1];
 int dfn[N+1];
 vector<int>ans;
 void Tarjan(int x,int root){
 	static int cnt,low[N+1];
 	dfn[x]=low[x]=++cnt;
 	int son=0;
-	for(int i=g.h[x];i;i=g.a[i].r){
-		int &v=g.a[i].v;
-		if(!dfn[v]){
-			Tarjan(v,root);
-			low[x]=min(low[x],low[v]);
-			if(low[v]>=dfn[x])son++;
-		}else low[x]=min(low[x],dfn[v]);
+	for(int i:g[x]){
+		if(!dfn[i]){
+			Tarjan(i,root);
+			low[x]=min(low[x],low[i]);
+			if(low[i]>=dfn[x]){
+				son++;
+			}
+		}else{
+			low[x]=min(low[x],dfn[i]);
+		}
 	}
 	if(x==root){
-		if(son>1)ans.push_back(x);
+		if(son>=2){
+			ans.push_back(x);
+		}
 	}else{
-		if(son>0)ans.push_back(x);
+		if(son>=1){
+			ans.push_back(x);
+		}
 	}
 }
 int main(){
 	/*freopen("test.in","r",stdin);
 	freopen("test.out","w",stdout);*/
 	
-	int n,m;
-	scanf("%d %d",&n,&m);
-	for(int i=1;i<=m;i++){
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int m;
+	cin>>n>>m;
+	while(m--){
 		int u,v;
-		scanf("%d %d",&u,&v);
-		g.create(u,v);
-		g.create(v,u);
+		cin>>u>>v;
+		g[u].push_back(v);
+		g[v].push_back(u);
 	}
 	for(int i=1;i<=n;i++){
-		if(!dfn[i])Tarjan(i,i);
+		if(!dfn[i]){
+			Tarjan(i,i);
+		}
 	}
 	sort(ans.begin(),ans.end());
-	printf("%d\n",ans.size());
-	for(int &i:ans)printf("%d ",i);
-	putchar(10);
+	cout<<ans.size()<<'\n';
+	for(int i:ans){
+		cout<<i<<' ';
+	}
+	
+	cout.flush();
 	
 	/*fclose(stdin);
 	fclose(stdout);*/
