--- a/_posts/2025-01-23-6.md
+++ b/_posts/2025-01-23-6.md
@@ -44,13 +44,11 @@ words:
 
 # Tarjan 求点双连通分量
 
-## 前置知识：Tarjan 求割点
+## 前置知识
 
-[如果你不会，你可以看看](/2025/01/23/5/)。
+[Tarjan 求割点](/2025/01/23/5/)。
 
-## Tarjan 求点双连通分量
-
-### 三条性质
+## 三条性质
 
 * **两个点双连通分量存在至多一个公共点**。
 
@@ -81,19 +79,19 @@ words:
           <img src="/img/2025/01/036.png">
       </p>
       <p>
-          则如图所示，由割点的性质，断开并不会导致不连通，因此绿色部分和红色部分也可以合并，因此绿色部分和红色部分都不为强连通分量。
+          则如图所示，由割点的性质，断开并不会导致不连通，因此绿色部分和红色部分也可以合并，因此绿色部分和红色部分都不为点双连通分量。
       </p>
       <p>
           与假设矛盾，故原命题成立。
       </p>
   </details>
 
-* **点双连通分量内 $dfn$ 最小的节点一定是割点或 DFS 生成树的根节点**。
+* **点双连通分量内 $\textit{dfn}$ 最小的节点一定是割点或 DFS 生成树的根节点**。
 
   <details class="note">
       <summary>证明</summary>
       <p>
-          令某点双连通分量内 $dfn$ 最小的节点为 $x$。
+          令某点双连通分量内 $\textit{dfn}$ 最小的节点为 $x$。
       </p>
       <ol>
           <li>
@@ -101,7 +99,7 @@ words:
                   当 $x$ 为根节点时：
               </p>
               <p>
-                  显然成立。因为在 DFS 生成树中，深度最小的节点 $dfn$ 最小，最小时可以显然为根节点。
+                  显然成立。因为在 DFS 生成树中，深度最小的节点 $\textit{dfn}$ 最小，最小时可以显然为根节点。
               </p>
           </li>
           <li>
@@ -112,7 +110,7 @@ words:
                   假设节点 $x$ 不为割点。
               </p>
               <p>
-                  那么将该点双连通分量与 $x$ 的父节点合并到一起，显然可以成为一个点双连通分量，则 $x$ 不是 $dfn$ 最小的节点。
+                  那么将该点双连通分量与 $x$ 的父节点合并到一起，显然可以成为一个点双连通分量，则 $x$ 不是 $\textit{dfn}$ 最小的节点。
               </p>
               <p>
                   与假设矛盾，故此种情况下原命题成立。
@@ -124,7 +122,7 @@ words:
       </p>
   </details>
 
-### 分类讨论
+## 分类讨论
 
 分类讨论：
 
@@ -150,8 +148,13 @@ words:
         对于根节点，显然只会是栈底，且只有自己能够访问到，不影响答案的正确性。
     </p>
 </details>
-
 注意这个点可能还是与其它点双的公共点，所以不能将其出栈，**只应当出栈到其子节点**。
+
+## 点双连通分量的判定
+
+如果说对于 $x$ 能够到达的节点 $i$，有 $\textit{low}_i\geq\textit{dfn}_x$，则 $i$ 及其子树均在 $x$ 的子树内。那么栈中找出子树 $i$ 即可。
+
+同时还要特判孤立点。
 
 # 例题 AC 代码
 
@@ -171,78 +174,80 @@ words:
 #include<stack>
 #include<list>
 using namespace std;
-constexpr const int N=5e5,M=2e6;
-struct graph{
-	struct edge{
-		int v,r;
-	}a[2*M+1];
-	int h[N+1];
-	void create(int u,int v){
-		static int top=1;
-		a[++top]={v,h[u]};
-		h[u]=top;
-	}
-}g;
+constexpr const int N=5e5;
+int n;
+vector<int>g[N+1];
+vector<vector<int>>ans;
 int dfn[N+1];
-int ansSize;
-vector<int>ans[N+1];
 void Tarjan(int x,int fx){
-	static int s[N+1];
-	static int top,cnt,low[N+1];
-	dfn[x]=low[x]=++cnt;//不要混用top和cnt!!
-	s[++top]=x;
+	static int cnt,low[N+1];
+	static vector<int>s;
 	int son=0;
-	for(int i=g.h[x];i;i=g.a[i].r){
-		int &v=g.a[i].v;
-		if(v==fx)continue;
-		if(!dfn[v]){
+	dfn[x]=low[x]=++cnt;
+	s.push_back(x);
+	for(int i:g[x]){
+		if(i==fx){
+			continue;
+		}
+		if(!dfn[i]){
 			son++;
-			Tarjan(v,x);
-			low[x]=min(low[x],low[v]);
-            /*
-            是割点或根节点。
-            割点很好理解，见"无向图 Tarjan 割点详解"。
-            至于根节点，dfn[root]本来就是最小值，一定成立。
-            */
-			if(low[v]>=dfn[x]){
-				ansSize++;
-				ans[ansSize].resize(0);
-				while(s[top]!=v){
-					ans[ansSize].push_back(s[top--]);
+			Tarjan(i,x);
+			low[x]=min(low[x],low[i]);
+			if(low[i]>=dfn[x]){
+				vector<int>pl;
+				while(s.back()!=i){
+					pl.push_back(s.back());
+					s.pop_back();
 				}
-				ans[ansSize].push_back(s[top--]);
-				ans[ansSize].push_back(x);
+				pl.push_back(s.back());
+				s.pop_back();
+				pl.push_back(x);
+				ans.push_back(pl); 
 			}
-		}else low[x]=min(low[x],dfn[v]);
-	}//没有父节点和子节点,孤立点
-	if(!fx&&!son)ans[++ansSize].push_back(x); 
+		}else{
+			low[x]=min(low[x],dfn[i]);
+		}
+	}
+	if(!fx&&!son){
+		ans.push_back({x});
+	}
 }
 int main(){
 	/*freopen("test.in","r",stdin);
 	freopen("test.out","w",stdout);*/
 	
-	int n,m;
-	scanf("%d %d",&n,&m);
-	for(int i=1;i<=m;i++){
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int m;
+	cin>>n>>m;
+	while(m--){
 		int u,v;
-		scanf("%d %d",&u,&v);
-		if(u==v)continue;//剔除自环!!!
-		g.create(u,v);
-		g.create(v,u);
+		cin>>u>>v;
+		if(u==v){
+			continue;
+		}
+		g[u].push_back(v);
+		g[v].push_back(u);
 	}
 	for(int i=1;i<=n;i++){
-		if(!dfn[i])Tarjan(i,0);
+		if(!dfn[i]){
+			Tarjan(i,0);
+		}
 	}
-	printf("%d\n",ansSize);
-	for(int i=1;i<=ansSize;i++){
-		printf("%d",ans[i].size());
-		for(int &j:ans[i])printf(" %d",j);
-		putchar(10);
+	cout<<ans.size()<<'\n';
+	for(auto &i:ans){
+		cout<<i.size()<<' ';
+		for(int j:i){
+			cout<<j<<' ';
+		}
+		cout<<'\n';
 	}
+	
+	cout.flush();
 	
 	/*fclose(stdin);
 	fclose(stdout);*/
 	return 0;
 }
 ```
-
