--- a/_posts/2025-01-23-1.md
+++ b/_posts/2025-01-23-1.md
@@ -23,7 +23,7 @@ words:
   - Tarjan强连通分量
 ---
 
-> [例题链接](https://www.luogu.com.cn/problem/P3387)
+> $\text{Upd on 2025/11/26}$：部分内容重写。~~好在没有 KMP 那么抽象~~。优化代码。
 
 <details class="tip" open>
     <summary>只有有向图有强连通分量</summary>
@@ -38,7 +38,7 @@ words:
 
 # 引入
 
-> 例题：
+> [luogu P3387](https://www.luogu.com.cn/problem/P3387)
 >
 > 给定一个 $n$ 个点 $m$ 条边有向图，每个点有一个权值，求一条路径，使路径经过的点权值之和最大。你只需要求出这个权值和。
 > 允许多次经过一条边或者一个点，但是，重复经过的点，权值只计算一次。
@@ -76,38 +76,38 @@ words:
 
 ### 维护信息
 
-在深搜的同时，维护 $dfn_i,low_i$、一个栈 $s$ 和一个标记数组 $flag_i$ 用于标记 $i$ 是否位于栈 $s$ 内。
+在深搜的同时，维护 $\textit{dfn}_i,\textit{low}_i$、一个栈 $s$ 和一个标记数组 $i$ 用于标记 $i$ 是否位于栈 $s$ 内。
 
-$dfn_x$ 表示 $x$ 的时间戳，即 DFS 序中第几个被搜索到的节点。
+$\textit{dfn}_x$ 表示 $x$ 的时间戳，即 DFS 序中第几个被搜索到的节点。
 
-$low_x$ 表示 $x$ 在 DFS 生成树中能够回退到的**最早**的位置，这个位置在求解 $x$ 时需要在栈 $s$ 中。
+$\textit{low}_x$ 表示 $x$ 在 DFS 生成树中能够回退到的**最早**的位置（DFS 序），这个位置在求解 $x$ 时需要在栈 $s$ 中。
 
-每当搜索到一个节点 $x$ 时，就将其加入栈 $s$，并标记 $flag_x=1$。注意，栈 $s$ **不是 DFS 搜索栈，不应当在递归结束前出栈**。
+每当搜索到一个节点 $x$ 时，就将其加入栈 $s$，并标记 $\textit{in}_x=\mathrm{true}$。注意，栈 $s$ **不是 DFS 搜索栈，不应当在递归结束前出栈**。
 
 ### 更新信息
 
-对于 $dfn_x,low_x$，最初的初始值都是其时间戳。
+对于 $\textit{dfn}_x,\textit{low}_x$，最初的初始值都是其时间戳。
 
-$low_x$ 为其时间戳即表示其至少能够回退至自己。
+$\textit{low}_x$ 为其时间戳即表示其至少能够回退至自己。
 
-遍历 $x$ 的子节点 $y$，若 $dfn_y=0$ 则代表还没有搜索过，进行搜索完成**之后**用 $low_y$ 来更新 $low_x$：
+遍历 $x$ 的子节点 $y$，若 $\textit{dfn}_y=0$ 则代表还没有搜索过，进行搜索完成**之后**用 $\textit{low}_y$ 来更新 $\textit{low}_x$：
 
 $$
-low_x=\min(low_x,low_y)
+\textit{low}_x=\min(\textit{low}_x,\textit{low}_y)
 $$
 
 因为 $x$ 有可能先走到子节点 $y$，然后再从子节点通过**回溯边**走到更高（更早）的位置，因此需要更新。
 
-但是若 $dfn_y\neq 0$，则代表已经搜索过，这时需要通过 $flag$ 判断其是否在栈 $s$ 中。
+但是若 $\textit{dfn}_y\neq 0$，则代表已经搜索过，这时需要通过 $\textit{in}$ 判断其是否在栈 $s$ 中。
 
-首先，$(x,y)$ 不可能是树边，因为 DFS 生成树显然是按照树边的顺序分配 $dfn$ 的。
+首先，$(x,y)$ 不可能是树边，因为 DFS 生成树显然是按照树边的顺序分配 $\textit{dfn}$ 的。
 
 * 如果在栈 $s$ 中，代表 $y$ 已经访问过，是 $x$ 的祖先节点，则边 $(x,y)$ 是一条回溯边，更新答案：
-  
+
   $$
   low_x=\min(low_x,dfn_y)
   $$
-  
+
 * 如果不是，则代表边 $(x,y)$ 是一条前向边或横边，不能够更新答案。
 
   <details class="question" open>
@@ -116,46 +116,71 @@ $$
           此处不是树边，原因见上文。
       </p>
       <p>
-          因为 $y$ 本来应该是 $x$ 的子节点，按照树边<b>未曾被访问过</b>，但是却已经被其他节点作为父节点访问过了（所以 $dfn_y>0$），而又在栈中，代表 $y$ 其实是 $x$ 的<b>祖先节点</b>。即回溯边。
+          因为 $y$ 本来应该是 $x$ 的子节点，按照树边<b>未曾被访问过</b>，但是却已经被其他节点作为父节点访问过了（所以 $\textit{dfn}_y>0$），而又在栈中，代表 $y$ 其实是 $x$ 的<b>祖先节点</b>。即回溯边。
       </p>
   </details>
 
 
-当通过子节点更新完成之后，如果仍然有 $dfn_x=low_x$，则代表 **$x$ 是这个强连通分量在DFS 生成树上的根节点**。
+当通过子节点更新完成之后，如果仍然有 $\textit{dfn}_x=\textit{low}_x$，则代表 **$x$ 是这个强连通分量在DFS 生成树上的根节点**。
 
-因为 $dfn_x=low_x$ 代表 $x$ 的子树中，没有路径能够使 $x$ 走出去~~是条死路~~。
+因为 $\textit{dfn}_x=\textit{low}_x$ 代表 $x$ 的子树中，没有路径能够使 $x$ 走出去~~是条死路~~。
 
 这时，我们再将栈 $s$ 中 $x$ 及在 $x$ 之后加入栈的元素全部出栈，这些元素就是一个强连通分量。
 
 ## 参考代码
 
 ```cpp
-//old是原图
-int dfn[N+1],id[N+1];
+int dfn[N+1],id[N+1];//id[i]:i的强连通分量的编号
 void Tarjan(int x){
-	static bool flag[N+1];
-	static int top,s[N+1],low[N+1];
-	dfn[x]=low[x]=++top;
-	s[top]=x;
-	flag[x]=true;
-	for(int i=old.h[x];i;i=old.a[i].r){
-		if(!dfn[old.a[i].v]){
-			Tarjan(old.a[i].v);
-			low[x]=min(low[x],low[old.a[i].v]);
-		}else{
-			if(flag[old.a[i].v]){
-				low[x]=min(low[x],dfn[old.a[i].v]);
-			}
+	static int cnt,low[N+1];
+	static bool in[N+1];
+	static vector<int>s;
+	dfn[x]=low[x]=++cnt;
+	in[x]=true;
+	s.push_back(x);
+	for(int i:old[x]){
+		if(!dfn[i]){
+			Tarjan(i);
+			low[x]=min(low[x],low[i]);
+		}else if(in[i]){
+			low[x]=min(low[x],dfn[i]);
 		}
 	}
 	if(dfn[x]==low[x]){
 		build.n++;
-		while(s[top]!=x){
-            //s[top]即强连通分量中的点
-            //...
-			top--;
-		}//...
-		top--;
+		while(s.back()!=x){
+			in[s.back()]=false;
+			id[s.back()]=build.n;
+			s.pop_back();
+		}
+		in[s.back()]=false;
+		id[s.back()]=build.n;
+		s.pop_back();
+	}
+}
+//...
+for(int i=1;i<=old.n;i++){
+    if(!dfn[i]){
+        Tarjan(i);
+    }
+}
+```
+
+# Tarjan 缩点
+
+求出强连通分量之后，重新建图即可，注意避免自环。
+
+```cpp
+void Build(){
+	for(int i=1;i<=old.n;i++){
+		//do something about nodes
+		for(int j:old[i]){
+			if(id[i]==id[j]){
+				continue;
+			}
+            //do something about edges
+			build[id[i]].push_back(id[j]); 
+		}
 	}
 }
 ```
@@ -180,122 +205,121 @@ Tarjan 缩点后重新建图成为**有向无环图**，并且进行拓扑排序
 #include<stack>
 #include<list>
 using namespace std;
-constexpr const int N=1e4,M=1e5;
+constexpr const int N=1e4;
 struct graph{
-	struct edge{
-		int v,r;
-	}a[M+1];
+	int n,a[N+1];
+	vector<int>g[N+1];
 	
-	int n,h[N+1],value[N+1],top;
-	void create(int u,int v){
-		a[++top]={v,h[u]};
-		h[u]=top;
+	vector<int>& operator [](int x){
+		return g[x];
 	}
 }old,build;
-//Tarjan缩点
 int dfn[N+1],id[N+1];
 void Tarjan(int x){
-	static bool flag[N+1];
-	static int top,cnt,s[N+1],low[N+1];
+	static int cnt,low[N+1];
+	static bool in[N+1];
+	static vector<int>s;
 	dfn[x]=low[x]=++cnt;
-	s[++top]=x;//此处的top其实可以是双重含义(时间戳计数器&栈计数器),由于top--只会发生在递归之后,因此不会出错,但需要注意不要混用,求点双连通分量时混用会出错!!
-	flag[x]=true;
-	for(int i=old.h[x];i;i=old.a[i].r){
-		if(!dfn[old.a[i].v]){
-			Tarjan(old.a[i].v);
-			low[x]=min(low[x],low[old.a[i].v]);
-		}else{
-			if(flag[old.a[i].v]){
-				low[x]=min(low[x],dfn[old.a[i].v]);
-			}
+	in[x]=true;
+	s.push_back(x);
+	for(int i:old[x]){
+		if(!dfn[i]){
+			Tarjan(i);
+			low[x]=min(low[x],low[i]);
+		}else if(in[i]){
+			low[x]=min(low[x],dfn[i]);
 		}
 	}
 	if(dfn[x]==low[x]){
 		build.n++;
-		while(s[top]!=x){
-			flag[s[top]]=false;
-			id[s[top]]=build.n;
-			build.value[build.n]+=old.value[s[top]];//建新图,合并节点信息
-			top--;
-		}flag[s[top]]=false;
-		id[s[top]]=build.n;
-		build.value[build.n]+=old.value[s[top]];
-		top--;
+		while(s.back()!=x){
+			in[s.back()]=false;
+			id[s.back()]=build.n;
+			s.pop_back();
+		}
+		in[s.back()]=false;
+		id[s.back()]=build.n;
+		s.pop_back();
 	}
-}//重新建图
+}
 void Build(){
 	for(int i=1;i<=old.n;i++){
-		for(int j=old.h[i];j;j=old.a[j].r){
-			int &u=id[i],&v=id[old.a[j].v];
-			if(u==v)continue;
-			build.create(u,v);
+		build.a[id[i]]+=old.a[i];
+		for(int j:old[i]){
+			if(id[i]==id[j]){
+				continue;
+			}
+			build[id[i]].push_back(id[j]); 
 		}
 	}
-}//拓扑排序
-int order[N+1]; 
+}
+int order[N+1];
 void topSort(){
 	static int in[N+1];
 	for(int i=1;i<=build.n;i++){
-		for(int j=build.h[i];j;j=build.a[j].r){
-			in[build.a[j].v]++;
+		for(int j:build[i]){
+			in[j]++;
 		}
 	}
 	int front=1,rear=1;
 	for(int i=1;i<=build.n;i++){
-		if(in[i]==0)order[rear++]=i;
+		if(!in[i]){
+			order[rear++]=i;
+		}
 	}
 	while(front<rear){
-		int u=order[front++];
-		for(int i=build.h[u];i;i=build.a[i].r){
-			int v=build.a[i].v;
-			if(--in[v]==0)order[rear++]=v;
+		int x=order[front++];
+		for(int i:build[x]){
+			in[i]--;
+			if(!in[i]){
+				order[rear++]=i;
+			}
 		}
 	}
-}//DP求解
+}
 int Dp(){
+	topSort();
 	static int dp[N+1];
+	int ans=0;
 	for(int i=1;i<=build.n;i++){
-		dp[i]=build.value[i];
-	}
-	for(int i=1;i<=build.n;i++){
-		int &u=order[i];
-		for(int j=build.h[u];j;j=build.a[j].r){
-			int &v=build.a[j].v;
-			dp[v]=max(dp[v],dp[u]+build.value[v]);
+		int x=order[i];
+		dp[x]+=build.a[x];
+		ans=max(ans,dp[x]);
+		for(int v:build[x]){
+			dp[v]=max(dp[v],dp[x]);
 		}
 	}
-	int Max=0;
-	for(int i=1;i<=build.n;i++){
-		Max=max(Max,dp[i]);
-	}return Max;
+	return ans;
 }
 int main(){
 	/*freopen("test.in","r",stdin);
 	freopen("test.out","w",stdout);*/
 	
-	int n,m;
-	scanf("%d %d",&n,&m);
-	old.n=n;
-	for(int i=1;i<=n;i++){
-		scanf("%d",old.value+i);
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int m;
+	cin>>old.n>>m;
+	for(int i=1;i<=old.n;i++){
+		cin>>old.a[i];
 	}
-	for(int i=1;i<=m;i++){
+	while(m--){
 		int u,v;
-		scanf("%d %d",&u,&v);
-		old.create(u,v);
+		cin>>u>>v;
+		old[u].push_back(v);
 	}
-	for(int i=1;i<=n;i++){
+	for(int i=1;i<=old.n;i++){
 		if(!dfn[i]){
 			Tarjan(i);
 		}
 	}
 	Build();
-	topSort();
-	printf("%d\n",Dp());
+	cout<<Dp()<<'\n';
+	
+	cout.flush();
 	
 	/*fclose(stdin);
 	fclose(stdout);*/
 	return 0;
 }
 ```
-
