--- a/_posts/2026-2-17-1.md
+++ b/_posts/2026-2-17-1.md
@@ -18,7 +18,7 @@ words:
 
 > [不知道从哪里下的 PDF](https://th911.dpdns.org/file/2026/02/FHR-分块bitset求高维偏序.pdf)，感觉写的很好。
 
-处理偏序问题时，需要考虑两个元素完全相同的情况，这时需要该元素 $a$ 的统计个数 $\textit{cnt}$，然后统计满足偏序条件元素个数 $x$，则 $a$ 的答案为 $x-1$，同时直接做 $\textit{cnt}$ 的贡献。
+处理偏序问题时，如果偏序条件都带等号，则需要考虑两个元素完全相同的情况，这时需要该元素 $a$ 的统计个数 $\textit{cnt}$，然后统计满足偏序条件元素个数 $x$，则 $a$ 的答案为 $x-1$，同时直接做 $\textit{cnt}$ 的贡献。
 
 # 一维偏序
 
