--- a/_posts/2025-01-22-1.md
+++ b/_posts/2025-01-22-1.md
@@ -692,7 +692,11 @@ void reverse(int l,int r){
 
 ## 懒标记
 
-由于懒标记涉及左右子树信息更新，因此在 `rotate` 和按排名查找 `kth` 时，需要先下传更新：
+由于懒标记涉及左右子树信息更新，因此在按排名查找 `kth` 时，需要先下传更新。之后 `splay`、`rotate` 上去时，因为标记已经下放完了，所以不用管。
+
+如果没有下放标记，你把 `down` 写在 `rotate` 里面是错的，因为标记要从上往下下放，不然你下放了又有新的。
+
+所以在 LCT 之类的东西里面，还要再写一个 `update` 来先下放所有标记。
 
 ```cpp
 void down(int p){
@@ -705,9 +709,6 @@ void down(int p){
 }
 void rotate(int x){
     int y=t[x].father,z=t[y].father;
-    down(z);
-    down(y);
-    down(x);
     bool mode=check(x);
     t[y].child[mode]=t[x].child[!mode];
     t[x].child[!mode]=y;
@@ -802,9 +803,6 @@ struct Splay{
 	}
 	void rotate(int x){
 		int y=t[x].father,z=t[y].father;
-		down(z);
-		down(y);
-		down(x);
 		bool mode=check(x);
 		t[y].child[mode]=t[x].child[!mode];
 		t[x].child[!mode]=y;
